--- a/src/layout.pug
+++ b/src/layout.pug
@@ -1,6 +1,15 @@
+block variables
+
 html(lang="en")
   head
     title= pageTitle
+
+    block style
+      //- use common styles global
+      link(href=require('./style.css') rel='stylesheet')
   body
     h1 Pug - node template engine
     block content
+
+    //- block for page scripts added in a page Pug file, must be always at last position
+    block script
