--- a/src/_layout.pug
+++ b/src/_layout.pug
@@ -6,7 +6,7 @@ html(lang="en")
 
     block style
       //- use common styles global
-      link(href=require('./style.css') rel='stylesheet')
+      link(href=require('./tailwind.css') rel='stylesheet')
   body
     h1 Pug - node template engine
     block content
