--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -12,4 +12,7 @@ append script
     script(src=require('./index.js'))
 
 block content
-    h2.text-3xl.font-bold Hello World!
+    .container
+        h2.text-3xl.font-bold.mt-3.mb-6 Latest Article
+        .grid.grid-cols-12.gap-10
+            include ../../components/_postItem
