--- a/src/_layout.pug
+++ b/src/_layout.pug
@@ -6,10 +6,11 @@ html(lang="en")
 
     block style
       //- use common styles global
-      link(href=require('./tailwind.css') rel='stylesheet')
+      //- link(href=require('./tailwind.css') rel='stylesheet')
+      link(href=require('./scss/main.scss') rel='stylesheet')
   body
     .container
-      h1.text-4xl.font-bold.my-8 Pug - node template engine
+      h1.title Pug - node template engine
       block content
 
     //- block for page scripts added in a page Pug file, must be always at last position
