--- a/src/_layout.pug
+++ b/src/_layout.pug
@@ -10,8 +10,7 @@ html(lang="en")
       link(href=require('./scss/main.scss') rel='stylesheet')
   body
     .container
-      img(src=require('@/assets/images/google-icon.png'))
-      img(src=require('../assets/images/google-icon.png'))
+      //- img(src=require('@/assets/images/google-icon.png'))
       h1.title Pug - node template engine
       block content
 
