--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -13,6 +13,7 @@ append script
 
 block content
     .container
+        img(src=require('Images/google-icon.png'))
         h2.text-3xl.font-bold.mt-3.mb-6 Latest Article
         .grid.grid-cols-12.gap-10
             each val in [1, 2, 3]
