feat: added main.js to layout

--- a/src/_layout.pug
+++ b/src/_layout.pug
@@ -16,3 +16,4 @@ html(lang="en")
 
     //- block for page scripts added in a page Pug file, must be always at last position
     block script
+      script(src=require('@js/main.js'))
